goit-markup-hw-05

--- a/index.html
+++ b/index.html
@@ -419,6 +419,19 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-botom">
+                <p class="footer-botom-p">Subscribe</p>
+                <form class="footer-form">
+                    <label class="footer-label">
+                    <input type="email" name="footer-email" class="footer-input" placeholder="E-mail"/>
+                    </label>
+                    <button type="submit" class="footer-btn">Subscribe
+                        <svg class="icon-sub" width="24" height="24">
+                            <use href="./images/icons.svg#icon-telegram.svg"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 </body>
