--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">  
 </head>
-<body>
+<>
 <!-- Header -->    
     <header class="header">
         <div class="container header-container">
@@ -434,5 +434,65 @@
             </div>
         </div>
     </footer>
+    <!-- Modal wind -->
+    <div class="backdrop is-open">
+        <div class="modal">
+            <button class="button-close" type="button">
+                <svg class="icon-close" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form">
+                <div class="div-form">
+                    <label class="label" for="user-name">Name</label>
+                    <div class="div-input">
+                        <input class="input" type="text" name="user-name" id="user-name" />
+                        <svg class="icon-label" width="18" height="24">
+                            <use href="./images/icons.svg#icon-people"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="div-form">
+                    <label class="label" for="user-tel">Phone</label>
+                    <div class="div-input">
+                        <input class="input" type="tel" name="user-tel" id="user-tel" />
+                        <svg class="icon-label" width="18" height="24">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="div-form">
+                    <label class="label" for="user-email">Email</label>
+                    <div class="div-input">
+                        <input class="input" type="email" name="user-email" id="user-email" />
+                        <svg class="icon-label" width="18" height="24">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="div-textarea">
+                    <label class="label" for="user-comment">Comment </label>
+                    <textarea name="user-comment" 
+                    class="textarea" 
+                    rows="6" 
+                    placeholder="Text input" 
+                    id="user-comment">
+                    </textarea>
+                </div>
+                <div class="div-checkbox">
+                    <input class="checkbox visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy" />
+                    <label class="label-checkbox" for="user-privacy">
+                        <span class="span-checkbox">
+                            <svg class="icon-checkbox" width="10" height="8">
+                                <use href="./images/icons.svg#icon-check"></use>
+                            </svg> </span>I accept the terms and conditions of the
+                        <a class="privacy-policy" href="#">Privacy Policy</a>
+                    </label>
+                </div>
+                <button class="send-button" type="submit">Send</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
