--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">  
 </head>
-<>
 <!-- Header -->    
     <header class="header">
         <div class="container header-container">
@@ -435,7 +434,7 @@
         </div>
     </footer>
     <!-- Modal wind -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal">
             <button class="button-close" type="button">
                 <svg class="icon-close" width="8" height="8">
