--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         </div>
     </footer>
     <!-- Modal wind -->
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal">
             <button class="button-close" type="button">
                 <svg class="icon-close" width="8" height="8">
